[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
josekit = "0.8.0"
rocket = { version = "0.5.0-rc.1", features = ["tls", "json", "uuid"] }
rocket_cors = "0.6.0-alpha1"
